@@ -27,127 +27,131 @@ import java.util.stream.Stream;
 @RequiredArgsConstructor
 public class PermissionService {
 
-    private final PermissionDao permissionDao;
-    private final SurveyDao surveyDao;
-    private final AccountDao accountDao;
-    private final TransactionHelper transactionHelper;
+  private final PermissionDao permissionDao;
+  private final SurveyDao surveyDao;
+  private final AccountDao accountDao;
 
-    public void checkAccess(UUID surveyId, UUID accountId, SurveyRole requiredRole) {
-        Survey survey = surveyDao.findById(surveyId)
-            .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Опрос не найден: " + surveyId));
+  @Transactional(readOnly = true)
+  public void checkAccess(UUID surveyId, UUID accountId, SurveyRole requiredRole) {
+    Survey survey = surveyDao.findById(surveyId)
+            .orElseThrow(() -> new ResponseStatusException(
+                    HttpStatus.NOT_FOUND, "Опрос не найден: " + surveyId));
 
-        if (survey.getAuthor().getId().equals(accountId)) {
-            return;
-        }
-
-        Permission permission = permissionDao.findBySurveyIdAndAccountId(surveyId, accountId)
-            .orElseThrow(() -> new ResponseStatusException(HttpStatus.FORBIDDEN, "Нет доступа к опросу"));
-
-        if (!hasEnoughRole(permission.getRole(), requiredRole)) {
-            throw new ResponseStatusException(HttpStatus.FORBIDDEN, 
-                "Недостаточно прав. Требуется: " + requiredRole);
-        }
+    if (survey.getAuthor().getId().equals(accountId)) {
+      return;
     }
 
-    public void checkOwnership(UUID surveyId, UUID accountId) {
-        Survey survey = surveyDao.findById(surveyId)
-            .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Опрос не найден: " + surveyId));
+    Permission permission = permissionDao.findBySurveyIdAndAccountId(surveyId, accountId)
+            .orElseThrow(() -> new ResponseStatusException(
+                    HttpStatus.FORBIDDEN, "Нет доступа к опросу"));
 
-        if (!survey.getAuthor().getId().equals(accountId)) {
-            throw new ResponseStatusException(HttpStatus.FORBIDDEN, "Вы не являетесь автором опроса");
-        }
+    if (!hasEnoughRole(permission.getRole(), requiredRole)) {
+      throw new ResponseStatusException(
+              HttpStatus.FORBIDDEN, "Недостаточно прав. Требуется: " + requiredRole);
     }
+  }
 
-    private boolean hasEnoughRole(SurveyRole userRole, SurveyRole requiredRole) {
-        if (requiredRole == SurveyRole.EDITOR) {
-            return userRole == SurveyRole.EDITOR;
-        }
-        if (requiredRole == SurveyRole.ANALYST) {
-            return userRole == SurveyRole.EDITOR || userRole == SurveyRole.ANALYST;
-        }
-        return false;
+  @Transactional(readOnly = true)
+  public void checkOwnership(UUID surveyId, UUID accountId) {
+    Survey survey = surveyDao.findById(surveyId)
+            .orElseThrow(() -> new ResponseStatusException(
+                    HttpStatus.NOT_FOUND, "Опрос не найден: " + surveyId));
+
+    if (!survey.getAuthor().getId().equals(accountId)) {
+      throw new ResponseStatusException(
+              HttpStatus.FORBIDDEN, "Вы не являетесь автором опроса");
     }
+  }
 
-    public PermissionsListResponseDto getPermissionsBySurveyId(UUID surveyId) {
-        return transactionHelper.inTransaction(() -> {
-            List<Permission> permissions = permissionDao.findAllBySurveyId(surveyId);
-            return new PermissionsListResponseDto(surveyId, permissions);
-        });
+  private boolean hasEnoughRole(SurveyRole userRole, SurveyRole requiredRole) {
+    if (requiredRole == SurveyRole.EDITOR) {
+      return userRole == SurveyRole.EDITOR;
     }
-
-    public List<PermissionResponseDto> getPermissionsByAccountId(UUID accountId) {
-        return transactionHelper.inTransaction(() ->
-            permissionDao.findAllByAccountId(accountId).stream()
-                .map(PermissionResponseDto::new)
-                .toList()
-        );
+    if (requiredRole == SurveyRole.ANALYST) {
+      return userRole == SurveyRole.EDITOR || userRole == SurveyRole.ANALYST;
     }
+    return false;
+  }
 
-    public PermissionResponseDto grantPermission(UUID surveyId, UUID currentUserId, PermissionRequestDto request) {
-        return transactionHelper.inTransaction(() -> {
-            checkOwnership(surveyId, currentUserId);
-
-            Survey survey = surveyDao.findById(surveyId)
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Опрос не найден: " + surveyId));
-
-            Account account = accountDao.findById(request.getAccountId())
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Аккаунт не найден: " + request.getAccountId()));
-
-            if (permissionDao.existsBySurveyIdAndAccountId(surveyId, request.getAccountId())) {
-                throw new ResponseStatusException(HttpStatus.CONFLICT, "Права уже выданы этому пользователю");
-            }
-
-            PermissionId permissionId = PermissionId.builder()
-                .accountId(request.getAccountId())
-                .surveyId(surveyId)
-                .build();
-
-            Permission permission = Permission.builder()
-                .id(permissionId)
-                .account(account)
-                .survey(survey)
-                .role(request.getRole())
-                .doNotify(request.isDoNotify())
-                .build();
-
-            permissionDao.save(permission);
-            return new PermissionResponseDto(permission);
-        });
-    }
-
-    public PermissionResponseDto updatePermission(UUID surveyId, UUID accountId, UUID currentUserId, PermissionRequestDto request) {
-        return transactionHelper.inTransaction(() -> {
-            checkOwnership(surveyId, currentUserId);
-
-            Permission permission = permissionDao.findBySurveyIdAndAccountId(surveyId, accountId)
-                .orElseThrow(() -> new ResponseStatusException(HttpStatus.NOT_FOUND, "Права не найдены"));
-
-            permission.setRole(request.getRole());
-            permission.setDoNotify(request.isDoNotify());
-
-            permissionDao.update(permission);
-            return new PermissionResponseDto(permission);
-        });
-    }
-
-    public void revokePermission(UUID surveyId, UUID accountId, UUID currentUserId) {
-        transactionHelper.inTransaction(() -> {
-            checkOwnership(surveyId, currentUserId);
-
-            permissionDao.deleteBySurveyIdAndAccountId(surveyId, accountId);
-        });
-    }
-
-   public List<Survey> getAccessibleSurveys(UUID accountId) {
-    return transactionHelper.inTransaction(() -> {
-        List<Survey> authored = surveyDao.findAllByAuthorId(accountId);
-        List<Survey> shared = permissionDao.findAllByAccountId(accountId).stream()
-            .map(Permission::getSurvey)
+  @Transactional(readOnly = true)
+  public List<PermissionResponseDto> getAllBySurveyId(UUID surveyId) {
+    return permissionDao.findAllBySurveyId(surveyId).stream()
+            .map(PermissionResponseDto::new)
             .toList();
+  }
 
-        return Stream.concat(authored.stream(), shared.stream())
-                .distinct()
-                .collect(Collectors.toList());
-    });
-}
+  @Transactional(readOnly = true)
+  public List<PermissionResponseDto> getAllByAccountId(UUID accountId) {
+    return permissionDao.findAllByAccountId(accountId).stream()
+            .map(PermissionResponseDto::new)
+            .toList();
+  }
+
+  @Transactional
+  public PermissionResponseDto create(UUID surveyId, UUID currentUserId, PermissionCreateDto dto) {
+    checkOwnership(surveyId, currentUserId);
+
+    if (permissionDao.existsBySurveyIdAndAccountId(surveyId, dto.getAccountId())) {
+      throw new ResponseStatusException(
+              HttpStatus.CONFLICT, "Пользователь уже имеет доступ к этому опросу");
+    }
+
+    Account account = accountDao.findById(dto.getAccountId())
+            .orElseThrow(() -> new ResponseStatusException(
+                    HttpStatus.NOT_FOUND, "Аккаунт не найден: " + dto.getAccountId()));
+
+    Survey survey = surveyDao.findById(surveyId)
+            .orElseThrow(() -> new ResponseStatusException(
+                    HttpStatus.NOT_FOUND, "Опрос не найден: " + surveyId));
+
+    PermissionId permissionId = PermissionId.builder()
+            .accountId(dto.getAccountId())
+            .surveyId(surveyId)
+            .build();
+
+    Permission permission = Permission.builder()
+            .id(permissionId)
+            .account(account)
+            .survey(survey)
+            .role(dto.getRole())
+            .doNotify(dto.isDoNotify())
+            .build();
+
+    permissionDao.save(permission);
+    return new PermissionResponseDto(permission);
+  }
+
+  @Transactional
+  public PermissionResponseDto update(UUID surveyId, UUID accountId,
+                                      UUID currentUserId, PermissionUpdateDto dto) {
+    checkOwnership(surveyId, currentUserId);
+
+    Permission permission = permissionDao.findBySurveyIdAndAccountId(surveyId, accountId)
+            .orElseThrow(() -> new ResponseStatusException(
+                    HttpStatus.NOT_FOUND, "Доступ не найден"));
+
+    if (dto.getRole() != null) permission.setRole(dto.getRole());
+    if (dto.getDoNotify() != null) permission.setDoNotify(dto.getDoNotify());
+
+    permissionDao.update(permission);
+    return new PermissionResponseDto(permission);
+  }
+
+  @Transactional
+  public void delete(UUID surveyId, UUID accountId, UUID currentUserId) {
+    checkOwnership(surveyId, currentUserId);
+    permissionDao.deleteBySurveyIdAndAccountId(surveyId, accountId);
+  }
+  
+  @Transactional(readOnly = true)
+  public List<Survey> getAccessibleSurveys(UUID accountId) {
+    List<Survey> authored = surveyDao.findAllByAuthorId(accountId);
+    List<Survey> shared = permissionDao.findAllByAccountId(accountId).stream()
+      .map(Permission::getSurvey)
+      .toList();
+
+    return Stream.concat(authored.stream(), shared.stream())
+      .distinct()
+      .collect(Collectors.toList());
+  }
 }
